ArgoCD/service-gpx-viewer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/manfredmuth/gpx-viewer
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: gpx-viewer
    app.kubernetes.io/component: gpx-viewer
    app.kubernetes.io/instance: gpx-viewer
    app.kubernetes.io/name: gpx-viewer
    app.kubernetes.io/part-of: gpx-viewer-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 20-ubi8
  name: gpx-viewer
  namespace: gpx-viewer
spec:
  clusterIP: 172.30.165.251
  clusterIPs:
    - 172.30.165.251
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: gpx-viewer
    deployment: gpx-viewer
  sessionAffinity: None
  type: ClusterIP
